manifest/frontend-deployment.yaml
## Frontend Deployment: frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  # namespace: devops-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        # image: jymo/frontend-image:v1.0.0
        image: gcr.io/enhanced-rite-393916/jymo/frontend-image:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
